--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "10.16.3"},
   "dependencies": {
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
